--- a/File No.6
+++ b/File No.6
@@ -6,7 +6,7 @@
 <body>
 
 <h1>GitHub</h1>
-<p>Mini project using GitHub Tools.</p>
+<p>Software Configuration Management Mini project using GitHub Tools.</p>
 <p>By: Vengkadasalam</p>
 
 </body>
